Columnize the social media buttons at max width 1065px to stop overlapping with content

--- a/_css/basic.css
+++ b/_css/basic.css
@@ -93,8 +93,15 @@ header li a:hover {
   }
 }
 
-#social-header {
-  display: none;
+  #social-header {
+    display: none;
+}
+
+/* columnize the social media buttons to stop overlapping with content */
+@media (max-width: 1065px) {
+  #social-sidebar {
+    display: block;
+  }
 }
 
 /*
